--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "dayjs": "^1.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "swiper": "^8.3.2"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@types/node": "^18.7.15",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
@@ -36,6 +38,7 @@
     "prettier": "^2.7.1",
     "tailwindcss": "^3.1.8",
     "typescript": "*",
-    "vite": "^3.0.7"
+    "vite": "^3.0.7",
+    "vite-plugin-svg-icons": "^2.0.1"
   }
 }
