--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "paths": {
       "@/*": ["src/*"],
       "@api/*": ["src/service/*"],
+      "@utils/*": ["src/utils/*"],
       "@assets/*": ["src/assets/*"],
       "@type/*": ["src/type/*"],
       "@pages/*": ["src/pages/*"],
