feat: 播放器补充 todo: 进度条onchange与timeupdate冲突问题

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
       "@type/*": ["src/type/*"],
       "@pages/*": ["src/pages/*"],
       "@store/*": ["src/store/*"],
+      "@service/*": ["src/service/*"],
       "@features/*": ["src/features/*"],
       "@components/*": ["src/components/*"],
       "@router/*": ["src/router/*"]
