--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.1.3",
     "dayjs": "^1.11.6",
+    "howler": "^2.2.3",
     "lodash": "^4.17.21",
     "rc-slider": "^10.0.1",
     "react": "^18.2.0",
@@ -19,7 +20,9 @@
     "swiper": "^8.4.4"
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^1.9.0",
     "@tailwindcss/line-clamp": "^0.4.2",
+    "@types/howler": "^2.2.7",
     "@types/lodash": "^4.14.187",
     "@types/node": "^18.11.8",
     "@types/react": "^18.0.24",
@@ -39,6 +42,7 @@
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
+    "react-redux": "^8.0.5",
     "tailwindcss": "^3.2.1",
     "typescript": "*",
     "vite": "^3.2.2",
