--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "colorthief": "^2.3.2",
     "dayjs": "^1.11.6",
     "howler": "^2.2.3",
     "lodash": "^4.17.21",
