--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dayjs": "^1.11.6",
     "howler": "^2.2.3",
     "lodash": "^4.17.21",
+    "qrcode": "^1.5.1",
     "rc-slider": "^10.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -26,6 +27,7 @@
     "@types/howler": "^2.2.7",
     "@types/lodash": "^4.14.187",
     "@types/node": "^18.11.8",
+    "@types/qrcode": "^1.5.0",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
