test: change request api

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
 # .env.development
-VITE_BASE_URL="http://neteasecloudmusicapi-production-ebf4.up.railway.app/"
+VITE_BASE_URL="https://neteasecloudmusicapi-production-ebf4.up.railway.app/"
